--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </div>
 
                     <div class="col l-5">
-                        <img class="hero-img" src="/img/main img.png" alt="">
+                        <img class="hero-img" src="img/main img.png" alt="">
                     </div>
 
                 </div>
@@ -64,20 +64,20 @@
 
                 <div class="row">
                     <div class="property-content col l-4 clearfix">
-                        <img class="intro-icon" src="/icon/icon main/icon intro1.svg" alt="">
+                        <img class="intro-icon" src="icon/icon main/icon intro1.svg" alt="">
                         <h3>Colaborate</h3>
                         <p>Work collaboratively with supportive designers and create your perfect website.</p>
                         
                         <a class="small-button" href="/theWay.html">CHECK OUR WORK</a>
                     </div>
                     <div class="property-content col l-4 clearfix">
-                        <img class="intro-icon" src="/icon/icon main/icon intro2.svg" alt="">
+                        <img class="intro-icon" src="icon/icon main/icon intro2.svg" alt="">
                         <h3>Blog</h3>
                         <p>Explore our blogs to educate and accentuate your online presence.</p>
                         <a class="small-button" href="/theWhy.html">READ OUR POSTS</a>
                     </div>
                     <div class="property-content col l-4 clearfix">
-                        <img class="intro-icon" src="/icon/icon main/icon intro3.svg" alt="">
+                        <img class="intro-icon" src="/con/icon main/icon intro3.svg" alt="">
                         <h3>Contact us</h3>
                         <p>Build customizable packages and get your free quote now.</p>
                         <a class="small-button" name="open-contact-modal" href="#">ASK FOR A QUOTE</a>
@@ -94,7 +94,7 @@
             <div class="process container">
                 <div class="row">
                     <div class="col l-3">
-                        <img class="process-icon" src="/icon/icon main/icon process.svg" alt="">
+                        <img class="process-icon" src="icon/icon main/icon process.svg" alt="">
                     </div>
 
                     <div class="col l-9">
@@ -151,19 +151,19 @@
 
                 <div class="row">
                     <div class="property-content center col l-3">
-                        <img class="responsive-icon" src="/icon/icon main/icon res 1.svg" alt="">
+                        <img class="responsive-icon" src="icon/icon main/icon res 1.svg" alt="">
                         <h3>mobile ready</h3>
                     </div>
                     <div class="property-content center col l-3">
-                        <img class="responsive-icon" src="/icon/icon main/icon res 2.svg" alt="">
+                        <img class="responsive-icon" src="icon/icon main/icon res 2.svg" alt="">
                         <h3>100% responsive</h3>
                     </div>
                     <div class="property-content center col l-3">
-                        <img class="responsive-icon" src="/icon/icon main/icon res 3.svg" alt="">
+                        <img class="responsive-icon" src="icon/icon main/icon res 3.svg" alt="">
                         <h3>retina ready</h3>
                     </div>
                     <div class="property-content center col l-3">
-                        <img class="responsive-icon" src="/icon/icon main/icon res 4.svg" alt="">
+                        <img class="responsive-icon" src="icon/icon main/icon res 4.svg" alt="">
                         <h3>flexible design</h3>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
             <div class="services container">
                 <div class="row">
                     <div class="col l-3">
-                        <img class="services-icon" src="/icon/icon main/icon services 1.svg" alt="">
+                        <img class="services-icon" src="icon/icon main/icon services 1.svg" alt="">
                     </div>
 
                     <div class="col l-9">
@@ -221,7 +221,7 @@
 
         <div class="section section-reduced yellow-bg">
             <div class="about_us container">
-                <img class="about_us_img" src="/icon/icon main/icon about us 1.svg" alt="">
+                <img class="about_us_img" src="icon/icon main/icon about us 1.svg" alt="">
                 <h3>about us</h3>
                 <p>We work with everyone, big or small, and we want to find the best solution for you.</p>
                 <a class="medium-button dark-blue-bg" href="/theUs.html">GET TO KNOW US</a>
@@ -233,7 +233,7 @@
             <div class="project container">
                 <div class="row">
                     <div class="col l-3">
-                        <img class="project-icon" src="/icon/icon main/icon services 1.svg" alt="">
+                        <img class="project-icon" src="icon/icon main/icon services 1.svg" alt="">
                     </div>
 
                     <div class="col l-9">
@@ -255,7 +255,7 @@
             <div class="footer container">
                 <div class="row">
                     <div class="col l-1">
-                        <img class="footer-icon" src="/icon/icon main/icon footer 1.svg" alt="">
+                        <img class="footer-icon" src="icon/icon main/icon footer 1.svg" alt="">
                     </div>
                     <div class="col l-2">
                         <ul>
