--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a class="small-button" href="/theWhy.html">READ OUR POSTS</a>
                     </div>
                     <div class="property-content col l-4 clearfix">
-                        <img class="intro-icon" src="/con/icon main/icon intro3.svg" alt="">
+                        <img class="intro-icon" src="icon/icon main/icon intro3.svg" alt="">
                         <h3>Contact us</h3>
                         <p>Build customizable packages and get your free quote now.</p>
                         <a class="small-button" name="open-contact-modal" href="#">ASK FOR A QUOTE</a>
