--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="fixed yellow-bg full-width highest">
         <div class="header container">
-            <a href="index.html"><img class="home-logo" src="logo/590d9229b4700605d36b8f38_[brilworx]logo-min.svg" alt=""></a>
+            <a href="index.html"><img class="home-logo" src="https://daks2k3a4ib2z.cloudfront.net/590d9229b4700605d36b8ed3/590d9229b4700605d36b8f38_%5Bbrilworx%5Dlogo-min.svg" alt=""></a>
             <nav class="navigator">
                 <a href="theWay.html">The Way</a>
                 <a href="theWhy.html">The Why</a>
