--- a/theUs.html
+++ b/theUs.html
@@ -26,11 +26,11 @@
 <body>
     <div class="fixed yellow-bg full-width highest">
         <div class="header container">
-            <a href="/index.html"><img class="home-logo" src="/logo/590d9229b4700605d36b8f38_[brilworx]logo-min.svg" alt=""></a>
+            <a href="index.html"><img class="home-logo" src="https://daks2k3a4ib2z.cloudfront.net/590d9229b4700605d36b8ed3/590d9229b4700605d36b8f38_%5Bbrilworx%5Dlogo-min.svg" alt=""></a>
             <nav class="navigator">
-                <a href="/theWay.html">The Way</a>
-                <a href="/theWhy.html">The Why</a>
-                <a class="under-line" href="/theUs.html">The Us</a>
+                <a href="theWay.html">The Way</a>
+                <a href="theWhy.html">The Why</a>
+                <a class="under-line" href="theUs.html">The Us</a>
                 <a name="open-contact-modal" class href="#">The How</a>
             </nav>
         </div>
@@ -81,27 +81,27 @@
                 <h4>We’re passionate about giving you the best results to make your vision a reality. By providing great support and applying our focus, we are a company who can and we can for you.  We believe in educating our customers so we write articles to improve their knowledge about the power of the web. You can find our articles here.</h4>
                 <div class="row center">
                     <div class="col l-3 center auto-margin">
-                        <img src="/img/theUs-img/img1.svg" alt="">
+                        <img src="img/theUs-img/img1.svg" alt="">
                         <h3>PASSION</h3>
                         <P>It’s what we love, so it’s what we do.</P>
                     </div>
                     <div class="col l-3 center auto-margin">
-                        <img src="/img/theUs-img/img2.svg" alt="">
+                        <img src="img/theUs-img/img2.svg" alt="">
                         <h3>DIALOGUE</h3>
                         <P>We prefer a jargon-free approach.</P>
                     </div>
                     <div class="col l-3 center auto-margin">
-                        <img src="/img/theUs-img/img3.svg" alt="">
+                        <img src="img/theUs-img/img3.svg" alt="">
                         <h3>PEOPLE</h3>
                         <P>We have a people-focused attitude.</P>
                     </div>
                     <div class="col l-3 center auto-margin">
-                        <img src="/img/theUs-img/img4.svg" alt="">
+                        <img src="img/theUs-img/img4.svg" alt="">
                         <h3>CULTURE</h3>
                         <P>Breakfast meetings are our favourite.</P>
                     </div>
                     <div class="col l-3 center auto-margin">
-                        <img src="/img/theUs-img/img5.svg" alt="">
+                        <img src="img/theUs-img/img5.svg" alt="">
                         <h3>ESSENCE</h3>
                         <P>We love style, but that doesn’t mean we compromise on substance.</P>
                     </div>
@@ -117,13 +117,13 @@
         <div class="footer container">
             <div class="row">
                 <div class="col l-1">
-                    <img class="footer-icon" src="/icon/icon main/icon footer 1.svg" alt="">
+                    <img class="footer-icon" src="icon/icon main/icon footer 1.svg" alt="">
                 </div>
                 <div class="col l-2">
                     <ul>
-                        <li><a href="/theUs.html">About us</a></li>
-                        <li><a href="/theWay.html">Services</a></li>
-                        <li><a href="/theUs.html">Portfolio</a></li>
+                        <li><a href="theUs.html">About us</a></li>
+                        <li><a href="theWay.html">Services</a></li>
+                        <li><a href="theUs.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="col l-2">
@@ -166,16 +166,16 @@
                     <div class="col l-6">
                         <h1>CONTACT US</h1>
                         <h3>Stop blending in with the crowd and start leaving your mark on the web.</h3>
-                        <p>Required field<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></p>
+                        <p>Required field<img class="required-icon" src="icon/required-field-icon.svg" alt=""></p>
                     </div>
     
                     <div class="col l-6">
                         <div class="user-info-group">
-                            <h5 class="user-info-title">Name<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">Name<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <input class="full-width" required type="text">
                         </div>
                         <div class="user-info-group">
-                            <h5 class="user-info-title">Email<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">Email<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <input class="full-width" required type="text">
                         </div>
                         <div class="user-info-group">
@@ -187,14 +187,14 @@
                             <input class="full-width" type="tel">
                         </div>
                         <div class="user-info-group">
-                            <h5 class="user-info-title">MESSAGE<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">MESSAGE<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <textarea class="full-width" required rows="4" cols="50"></textarea>
                         </div>
                         <input class="submit-contact-msg-btn" type="submit" value="SUBMIT MESSAGE">
                     </div>
                 </div>
     
-                <img class="modal-img" src="/img/modal-img.png" alt="">
+                <img class="modal-img" src="img/modal-img.png" alt="">
 
             </div>
         </div>
