--- a/theWay.html
+++ b/theWay.html
@@ -28,11 +28,11 @@
     <!-- HEADER -->
     <div class="fixed yellow-bg full-width highest">
         <div class="header container">
-            <a href="/index.html"><img class="home-logo" src="/logo/590d9229b4700605d36b8f38_[brilworx]logo-min.svg" alt=""></a>
+            <a href="index.html"><img class="home-logo" src="https://daks2k3a4ib2z.cloudfront.net/590d9229b4700605d36b8ed3/590d9229b4700605d36b8f38_%5Bbrilworx%5Dlogo-min.svg" alt=""></a>
             <nav class="navigator">
                 <a class="under-line" href="/theWay.html">The Way</a>
-                <a href="/theWhy.html">The Why</a>
-                <a href="/theUs.html">The Us</a>
+                <a href="theWhy.html">The Why</a>
+                <a href="theUs.html">The Us</a>
                 <a name="open-contact-modal" class href="#">The How</a>
             </nav>
         </div>
@@ -82,7 +82,7 @@
         <div class="container main">
             <div class="row">
                 <div class="col l-3">
-                    <img class="img-content" src="/icon/icon The Way page/icon computer1.svg" alt="">
+                    <img class="img-content" src="icon/icon The Way page/icon computer1.svg" alt="">
                 </div>
 
                 <div class="col l-9">
@@ -100,7 +100,7 @@
         <div class="container main">
             <div class="row">
                 <div class="col l-3">
-                    <img class="img-content" src="/icon/icon The Way page/icon computer2.svg" alt="">
+                    <img class="img-content" src="icon/icon The Way page/icon computer2.svg" alt="">
                 </div>
 
                 <div class="col l-9">
@@ -118,7 +118,7 @@
         <div class="container main">
             <div class="row">
                 <div class="col l-3">
-                    <img class="img-content" src="/icon/icon The Way page/icon computer3.svg" alt="">
+                    <img class="img-content" src="icon/icon The Way page/icon computer3.svg" alt="">
                 </div>
 
                 <div class="col l-9">
@@ -136,7 +136,7 @@
         <div class="container main">
             <div class="row">
                 <div class="col l-3">
-                    <img class="img-content" src="/icon/icon The Way page/icon computer4.svg" alt="">
+                    <img class="img-content" src="icon/icon The Way page/icon computer4.svg" alt="">
                 </div>
 
                 <div class="col l-9">
@@ -159,28 +159,28 @@
             <div class="portfolio row">
                 <div class="col l-3">
                     <a href="">
-                        <img src="/img/work1.jpg" alt="">
+                        <img src="img/work1.jpg" alt="">
                         <h3>ACUNOV</h3>
                     </a>
                 </div>
 
                 <div class="col l-3">
                     <a href="">
-                        <img src="/img/work2.jpg" alt="">
+                        <img src="img/work2.jpg" alt="">
                         <h3>KREE8 BRANDING</h3>
                     </a>
                 </div>
 
                 <div class="col l-3">
                     <a href="">
-                        <img src="/img/work3.jpg" alt="">
+                        <img src="img/work3.jpg" alt="">
                         <h3>REACH87</h3>
                     </a>
                 </div>
 
                 <div class="col l-3">
                     <a href="">
-                        <img src="/img/work4.jpg" alt="">
+                        <img src="img/work4.jpg" alt="">
                         <h3>STRIDE ALLEY</h3>
                     </a>
                 </div>
@@ -196,13 +196,13 @@
         <div class="footer container">
             <div class="row">
                 <div class="col l-1">
-                    <img class="footer-icon" src="/icon/icon main/icon footer 1.svg" alt="">
+                    <img class="footer-icon" src="icon/icon main/icon footer 1.svg" alt="">
                 </div>
                 <div class="col l-2">
                     <ul>
-                        <li><a href="/theUs.html">About us</a></li>
-                        <li><a href="/theWay.html">Services</a></li>
-                        <li><a href="/theUs.html">Portfolio</a></li>
+                        <li><a href="theUs.html">About us</a></li>
+                        <li><a href="theWay.html">Services</a></li>
+                        <li><a href="theUs.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="col l-2">
@@ -244,16 +244,16 @@
                     <div class="col l-6">
                         <h1>CONTACT US</h1>
                         <h3>Stop blending in with the crowd and start leaving your mark on the web.</h3>
-                        <p>Required field<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></p>
+                        <p>Required field<img class="required-icon" src="icon/required-field-icon.svg" alt=""></p>
                     </div>
     
                     <div class="col l-6">
                         <div class="user-info-group">
-                            <h5 class="user-info-title">Name<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">Name<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <input class="full-width" required type="text">
                         </div>
                         <div class="user-info-group">
-                            <h5 class="user-info-title">Email<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">Email<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <input class="full-width" required type="text">
                         </div>
                         <div class="user-info-group">
@@ -265,14 +265,14 @@
                             <input class="full-width" type="tel">
                         </div>
                         <div class="user-info-group">
-                            <h5 class="user-info-title">MESSAGE<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">MESSAGE<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <textarea class="full-width" required rows="4" cols="50"></textarea>
                         </div>
                         <input class="submit-contact-msg-btn" type="submit" value="SUBMIT MESSAGE">
                     </div>
                 </div>
     
-                <img class="modal-img" src="/img/modal-img.png" alt="">
+                <img class="modal-img" src="img/modal-img.png" alt="">
 
             </div>
         </div>
