--- a/theWhy.html
+++ b/theWhy.html
@@ -27,11 +27,11 @@
     <!-- HEADER -->
     <div class="fixed yellow-bg full-width highest">
         <div class="header container">
-            <a href="/index.html"><img class="home-logo" src="/logo/590d9229b4700605d36b8f38_[brilworx]logo-min.svg" alt=""></a>
+            <a href="index.html"><img class="home-logo" src="https://daks2k3a4ib2z.cloudfront.net/590d9229b4700605d36b8ed3/590d9229b4700605d36b8f38_%5Bbrilworx%5Dlogo-min.svg" alt=""></a>
             <nav class="navigator">
-                <a href="/theWay.html">The Way</a>
-                <a class="under-line" href="/theWhy.html">The Why</a>
-                <a href="/theUs.html">The Us</a>
+                <a href="theWay.html">The Way</a>
+                <a class="under-line" href="theWhy.html">The Why</a>
+                <a href="theUs.html">The Us</a>
                 <a name="open-contact-modal" class href="#">The How</a>
             </nav>
         </div>
@@ -47,14 +47,14 @@
                 <div class="row">
                     <div class="col l-6">
                         <a href="">
-                            <img class="full-width" src="/img/large-blog1.jpg" alt="">
+                            <img class="full-width" src="img/large-blog1.jpg" alt="">
                             <h3>A GUIDE ON CONVERTING WEBSITE VISITORS INTO CUSTOMERS</h3>
                             <p>Attracting visitors to your site is one thing, but converting them in to a customer is another.</p>
                         </a>
                     </div>
                     <div class="col l-6">
                         <a href="">
-                            <img class="full-width" src="/img/large-blog2.jpg" alt="">
+                            <img class="full-width" src="img/large-blog2.jpg" alt="">
                             <h3>THE IMPORTANCE OF THE RIGHT DOMAIN</h3>
                             <p>Your domain is often your first impression so choosing the right one is crucial.</p>
                         </a>
@@ -69,70 +69,70 @@
             <div class="row list-group">
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img1.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img1.jpg" alt="">
                         <h5>10 WEB DESIGN BLOGS YOU CAN'T MISS</h5>
                         <p>Quam voluptas officia omnis hic tempora. Reiciendis sint labore. Rerum accusamus deserunt perferendis porro ut. Deleniti tenetur inventore quidem maiores. Impedit autem expedita. Eaque aut velit eveniet.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img2.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img2.jpg" alt="">
                         <h5>5 GREAT WEB DESIGN RESOURCES</h5>
                         <p>Molestias cumque sint aperiam ab. Reiciendis sint consectetur ut ipsam qui et porro. Iure sed vitae.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img3.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img3.jpg" alt="">
                         <h5>7 WAYS TO IMPROVE WEBSITE USABILITY AND ACCESSIBILITY</h5>
                         <p>Voluptatibus ea similique in fugiat eos. Distinctio labore voluptatem consequatur quo quaerat omnis. Tempora odio rerum illo sint quas quaerat quod. Ut nihil explicabo quia. Sit atque odit repellendus aut sint.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img4.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img4.jpg" alt="">
                         <h5>WHY WE LOVE WEBFLOW (AND YOU SHOULD, TOO!)</h5>
                         <p>Minima corporis quia voluptates nemo est necessitatibus quia. Est alias eum sint sunt. Magnam voluptates magnam pariatur omnis voluptatibus ex sunt debitis accusantium. Dolores quia tenetur.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img5.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img5.jpg" alt="">
                         <h5>HOW TO IMPROVE WEB DESIGN PROCESS</h5>
                         <p>Corrupti itaque natus nulla nobis pariatur enim fugit. Repellendus nisi accusamus doloremque unde tempora accusamus voluptate. Quasi quia quidem sunt aut tenetur. Dignissimos aut voluptate rerum aut.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img3.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img3.jpg" alt="">
                         <h5>15 BEST BLOGS TO FOLLOW ABOUT WEB DESIGN</h5>
                         <p>Eligendi provident debitis minus incidunt rerum voluptatem sint porro tenetur. Rerum alias natus vel velit natus. Hic est distinctio ad reprehenderit veritatis aliquam. Exercitationem quae earum dolorem illo.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img7.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img7.jpg" alt="">
                         <h5>THE WORST ADVICE WE'VE EVER HEARD ABOUT WEB DESIGN</h5>
                         <p>Consectetur qui dolores ut autem enim hic aut. Natus placeat et quos dignissimos porro dolorem iure. Dignissimos quam mollitia quo quia aut sint officia. Quidem sunt perspiciatis rerum pariatur.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img3.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img3.jpg" alt="">
                         <h5>10 QUICK TIPS ABOUT BLOGGING</h5>
                         <p>Possimus ducimus repellendus aut. Quo unde maiores dolorem volu.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img8.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img8.jpg" alt="">
                         <h5>10 THINGS NOBODY TOLD YOU ABOUT BEING A WEB DESIGNER</h5>
                         <p>Aut earum perferendis officiis et. Adipisci voluptatem et dolorem et consequatur quis. Et velit fugiat quae ex. Est et et aliquid. Voluptatem vero sed voluptas nulla saepe nam nulla exercitationem. Unde sint quia iusto tem.</p>
                     </a>
                 </div>
                 <div class="list-item col l-4 ">
                     <a href="">
-                        <img class="full-width" src="/img/listitem-img9.jpg" alt="">
+                        <img class="full-width" src="img/listitem-img9.jpg" alt="">
                         <h5>10 GREAT EXAMPLES OF RESPONSIVE WEBSITES</h5>
                         <p>Voluptatem sint distinctio enim aliquid. Unde maxime error impedit excepturi unde fugit dolorum.</p>
                     </a>
@@ -146,13 +146,13 @@
         <div class="footer container">
             <div class="row">
                 <div class="col l-1">
-                    <img class="footer-icon" src="/icon/icon main/icon footer 1.svg" alt="">
+                    <img class="footer-icon" src="icon/icon main/icon footer 1.svg" alt="">
                 </div>
                 <div class="col l-2">
                     <ul>
-                        <li><a href="/theUs.html">About us</a></li>
-                        <li><a href="/theWay.html">Services</a></li>
-                        <li><a href="/theUs.html">Portfolio</a></li>
+                        <li><a href="theUs.html">About us</a></li>
+                        <li><a href="theWay.html">Services</a></li>
+                        <li><a href="theUs.html">Portfolio</a></li>
                     </ul>
                 </div>
                 <div class="col l-2">
@@ -194,16 +194,16 @@
                     <div class="col l-6">
                         <h1>CONTACT US</h1>
                         <h3>Stop blending in with the crowd and start leaving your mark on the web.</h3>
-                        <p>Required field<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></p>
+                        <p>Required field<img class="required-icon" src="icon/required-field-icon.svg" alt=""></p>
                     </div>
     
                     <div class="col l-6">
                         <div class="user-info-group">
-                            <h5 class="user-info-title">Name<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">Name<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <input class="full-width" required type="text">
                         </div>
                         <div class="user-info-group">
-                            <h5 class="user-info-title">Email<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">Email<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <input class="full-width" required type="text">
                         </div>
                         <div class="user-info-group">
@@ -215,14 +215,14 @@
                             <input class="full-width" type="tel">
                         </div>
                         <div class="user-info-group">
-                            <h5 class="user-info-title">MESSAGE<img class="required-icon" src="/icon/required-field-icon.svg" alt=""></h5>
+                            <h5 class="user-info-title">MESSAGE<img class="required-icon" src="icon/required-field-icon.svg" alt=""></h5>
                             <textarea class="full-width" required rows="4" cols="50"></textarea>
                         </div>
                         <input class="submit-contact-msg-btn" type="submit" value="SUBMIT MESSAGE">
                     </div>
                 </div>
     
-                <img class="modal-img" src="/img/modal-img.png" alt="">
+                <img class="modal-img" src="img/modal-img.png" alt="">
 
             </div>
         </div>
