--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="section grey-bg">
-            <div class="process container">
+            <div class="process container main">
                 <div class="row">
                     <div class="col l-3">
                         <img class="process-icon" src="icon/icon main/icon process.svg" alt="">
@@ -134,7 +134,7 @@
 
 
         <div class="section blue-bg">
-            <div class="responsive container">
+            <div class="responsive container main">
                 <div class="row col">
                     <div class="hero-message">
                         <span>RESPONSIVE DESIGN</span>
@@ -173,7 +173,7 @@
         </div>
 
         <div class="section grey-bg">
-            <div class="services container">
+            <div class="services container main">
                 <div class="row">
                     <div class="col l-3">
                         <img class="services-icon" src="icon/icon main/icon services 1.svg" alt="">
@@ -220,7 +220,7 @@
         </div>
 
         <div class="section section-reduced yellow-bg">
-            <div class="about_us container">
+            <div class="about_us container main">
                 <img class="about_us_img" src="icon/icon main/icon about us 1.svg" alt="">
                 <h3>about us</h3>
                 <p>We work with everyone, big or small, and we want to find the best solution for you.</p>
@@ -230,7 +230,7 @@
         </div>
 
         <div class="section grey-bg">
-            <div class="project container">
+            <div class="project main container">
                 <div class="row">
                     <div class="col l-3">
                         <img class="project-icon" src="icon/icon main/icon services 1.svg" alt="">
