--- a/theWay.html
+++ b/theWay.html
@@ -193,7 +193,7 @@
     </div>
 
     <div class="section section-reduced dark-blue-bg">
-        <div class="footer container">
+        <div class="footer container main">
             <div class="row">
                 <div class="col l-1">
                     <img class="footer-icon" src="icon/icon main/icon footer 1.svg" alt="">
