--- a/theWay.html
+++ b/theWay.html
@@ -30,7 +30,7 @@
         <div class="header container">
             <a href="index.html"><img class="home-logo" src="https://daks2k3a4ib2z.cloudfront.net/590d9229b4700605d36b8ed3/590d9229b4700605d36b8f38_%5Bbrilworx%5Dlogo-min.svg" alt=""></a>
             <nav class="navigator">
-                <a class="under-line" href="/theWay.html">The Way</a>
+                <a class="under-line" href="theWay.html">The Way</a>
                 <a href="theWhy.html">The Why</a>
                 <a href="theUs.html">The Us</a>
                 <a name="open-contact-modal" class href="#">The How</a>
