--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a href="theWay.html">The Way</a>
                 <a href="theWhy.html">The Why</a>
                 <a href="theUs.html">The Us</a>
-                <a name="open-contact-modal" href="">The How</a>
+                <a name="open-contact-modal" href="#">The How</a>
             </nav>
         </div>
     </div>
